[tool.poetry]
name = "sound-spec"
version = "0.1.0"
description = "Audio Music Viz"
authors = ["Salsa Steve <steve.laguna@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sounddevice = "^0.5.1"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
soundfile = "^0.12.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.7.4"
pyflakes = "^3.2.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
